--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
 /* Give the header a border */
 .navbar {
     border-bottom: 2px solid #ccc;
+    padding: 0rem;
+    margin-bottom: 5%;
 }
 
 /* Give name teal background and white font */
@@ -20,6 +22,61 @@ body {
 h2.container-fluid {
     border-bottom: 1px solid #ddd;
     color: #4aaaa5;
+    padding-bottom: 4%;
+}
+
+/* Format header */
+.container {
+    width: 75%;
+    margin: auto;
+}
+
+/* Format main content for all pages */
+.container-main {
+    width: 75%;
+    margin: auto;
+    padding: 4%;
+    border: 1px solid #ddd;
+}
+
+/* ABOUT */
+
+.img-fluid {
+    margin-top: 5%;
+}
+
+p {
+    margin-top: 5%;
+}
+
+/* PORTFOLIO */
+
+/* Make the card titles teal with white text */
+.card-title {
+    background-color: #4aaaa5;
+    color: #fff;
+    padding: 20px;
+}
+
+/* Make the project name lay centered and on top of the respective image */
+.card-img-overlay {
+    margin-top: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h5 {
+    font-size: 16px;
+}
+
+/* CONTACT */
+form {
+    margin-top: 5%;
+}
+
+button {
+    background-color: #4aaaa5;
+    color: #fff;
 }
 
 /* Give footer dark background and teal border */
